Fix footer styles on mobile

--- a/anatomy/static/sass/_global.sass
+++ b/anatomy/static/sass/_global.sass
@@ -69,8 +69,10 @@ div#footer
   z-index: 10
   margin-top: -30px
   padding-top: 50px
-  padding-bottom: 90px
+  padding-bottom: 60px
   min-height: 60px
+  .row
+    margin-bottom: 30px
 
 #ng-view
   position: relative
