--- a/anatomy/static/sass/_responsive.sass
+++ b/anatomy/static/sass/_responsive.sass
@@ -108,6 +108,16 @@
     a
       border-radius: 4px 4px 0 0
       margin-bottom: 0px
+
+  div#footer
+    padding-top: 30px
+    padding-bottom: 20px
+    .row
+      margin-bottom: 10px
+    .col-sm-3
+      width: 49%
+      display: inline-block
+      margin-top: 20px
     
 
 
